ensuring liteserve builds

--- a/src/ListenerComponent/LiteServ.iOS/LiteServ.iOS.csproj
+++ b/src/ListenerComponent/LiteServ.iOS/LiteServ.iOS.csproj
@@ -188,6 +188,7 @@
     </ProjectReference>
   </ItemGroup>
   <Target Condition=" '$(Configuration)' == 'Packaging' Or '$(Archive)' == 'true'" AfterTargets="Build">
+		<Name>""</Name>
 		<ItemGroup>
             <x Include="$(OutputPath)LiteServ.app\**\*.*" />
 		</ItemGroup>
